[package]
name = "learn-wgpu"
version = "0.0.0"
authors = ["rukai"]
repository = "https://github.com/rust-tutorials/learn-wgpu"
readme = "README.md"
edition = "2018"
description = "A guided introduction to using the wgpu crate"
license = "MIT"

[dependencies]
wgpu = { version = "0.3", git = "https://github.com/gfx-rs/wgpu-rs", rev = "1b401871ca0738c175369ebf333efe0be2dfc1a9" }
