[package]
name = "learn-wgpu"
version = "0.0.0"
authors = ["rukai"]
repository = "https://github.com/rust-tutorials/learn-wgpu"
readme = "README.md"
edition = "2018"
description = "A guided introduction to using the wgpu crate"
license = "MIT"

[dependencies]
wgpu = { version = "0.3", git = "https://github.com/gfx-rs/wgpu-rs", rev = "17077f49b5a5c0ee65c9733e8fb262036cf5d706" }
